<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/emptyImage"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundinsert" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="652dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subjectID" />

            <EditText
                android:id="@+id/txtSubjectCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterSubCode"
                android:importantForAutofill="no"
                android:inputType="text">

                <requestFocus />
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group" />

            <EditText
                android:id="@+id/txtBatchGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterBatch"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_type" />

            <Spinner
                android:id="@+id/spinnerClassType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/spinner_style"
                android:prompt="@string/class_type" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/faculty1" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/year1" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/semester1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinnerFaculty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_style"
                        android:prompt="@string/select_faculty" />

                    <Spinner
                        android:id="@+id/spinnerYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_style"
                        android:prompt="@string/year" />

                    <Spinner
                        android:id="@+id/spinnerSemester"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_style"
                        android:prompt="@string/semester" />

                </LinearLayout>
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="26dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/startTime" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/endTime" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border_background"
                        android:hint="@string/enterStartTime"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="NestedWeights" />

                    <EditText
                        android:id="@+id/txtEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border_background"
                        android:hint="@string/enterEndTime"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day" />

            <Spinner
                android:id="@+id/spinnerDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_style"
                android:prompt="@string/selectDay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hall" />

            <EditText
                android:id="@+id/txtHallLab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterLecHallLab"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lec" />

            <EditText
                android:id="@+id/txtLecIns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterLecturer"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnInsert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/insert"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <Space
                android:layout_width="469dp"
                android:layout_height="87dp" />


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingPanelInsert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#451B1717"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/loadingInsert"
            android:layout_width="110dp"
            android:layout_height="117dp"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>