<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/emptyImage"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundinsert" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="652dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subjectID"
                android:textColor="#FAF5F5" />

            <EditText
                android:id="@+id/txtUpdateSubjectCode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/subject_insert_styles"
                android:hint="@string/enterSubCode"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center">

                <requestFocus />
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:textColor="#FAF5F5" />

            <EditText
                android:id="@+id/txtUpdateBatchGroup"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/subject_insert_styles"
                android:hint="@string/enterBatch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_type"
                android:textColor="#FAF5F5" />

            <Spinner
                android:id="@+id/spinnerUpdateClassType"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/spinner_style"
                android:prompt="@string/class_type"
                android:textAlignment="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_niroshan"
                    android:text="@string/search"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnUpdateReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_niroshan"
                    android:text="@string/reset"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/faculty1"
                        android:textColor="#FAF5F5" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/year1"
                        android:textColor="#FAF5F5" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/semester1"
                        android:textColor="#FAF5F5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinnerUpdateFaculty"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_style"
                        android:prompt="@string/select_faculty" />

                    <Spinner
                        android:id="@+id/spinnerUpdateYear"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_style"
                        android:prompt="@string/year" />

                    <Spinner
                        android:id="@+id/spinnerUpdateSemester"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_style"
                        android:prompt="@string/semester" />

                </LinearLayout>
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/startTime"
                        android:textColor="#FAF5F5" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/endTime"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtUpdateStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_background"
                        android:hint="@string/enterStartTime"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textAlignment="center"
                        tools:ignore="NestedWeights" />

                    <EditText
                        android:id="@+id/txtUpdateEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_background"
                        android:hint="@string/enterEndTime"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="#FAF5F5" />

            <Spinner
                android:id="@+id/spinnerUpdateDay"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/spinner_style"
                android:prompt="@string/selectDay"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hall"
                android:textColor="#FAF5F5" />

            <EditText
                android:id="@+id/txtUpdateHallLab"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/subject_insert_styles"
                android:hint="@string/enterLecHallLab"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lec"
                android:textColor="#FAF5F5" />

            <EditText
                android:id="@+id/txtUpdateLecIns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/subject_insert_styles"
                android:hint="@string/enterLecturer"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textAlignment="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_niroshan"
                    android:text="@string/update"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnResetUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_niroshan"
                    android:text="@string/reset"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <Space
                android:layout_width="469dp"
                android:layout_height="87dp" />


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingPanelUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#451B1717"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/loadingUpdate"
            android:layout_width="110dp"
            android:layout_height="117dp"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>